<resources>
    <string name="app_name">BC Gallery</string>
    <string name="no_content">No files here</string>
    <string name="empty" />
    <string name="parent_files_empty">No content in parent directory</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_share">Share</string>
    <string name="action_crop">Crop</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="discord">https://discord.gg/6V6RNHm</string>
</resources>
