<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSettings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dark_round"
    android:orientation="vertical"
    android:padding="24dp"
    android:visibility="gone"
    tools:showIn="@layout/fragment_image"
    tools:visibility="visible">

    <TextView
        android:id="@+id/tvRotate"
        style="@style/menu_image_item"
        android:drawableStart="@drawable/ic_rotate_right_white_24dp"
        android:text="@string/action_rotate" />

    <TextView
        android:id="@+id/tvShare"
        style="@style/menu_image_item"
        android:drawableStart="@drawable/ic_share_white_24dp"
        android:text="@string/action_share" />

    <TextView
        android:id="@+id/tvCrop"
        style="@style/menu_image_item"
        android:drawableStart="@drawable/ic_crop_white_24dp"
        android:text="@string/action_crop" />

    <TextView
        android:id="@+id/tvEdit"
        style="@style/menu_image_item"
        android:drawableStart="@drawable/ic_edit_white_24dp"
        android:text="@string/action_edit" />

    <TextView
        android:id="@+id/tvDelete"
        style="@style/menu_image_item"
        android:drawableStart="@drawable/ic_delete_white_24dp"
        android:text="@string/action_delete" />

</LinearLayout>